[tool.poetry]
name = "foursight"
version = "3.6.1.1b3"  # TODO: To become 3.6.2
description = "Serverless Chalice Application for Monitoring"
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
packages = [
  { include = "chalicelib_fourfront" }
]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
click = "^7.1.2"
dcicutils = "^7.5.2"
elasticsearch = "^7.13.4"
elasticsearch-dsl = "^7.0.0"
## adding foursight-core
# use below for deployment
# use below for tests but not for deployment
# foursight-core = { git = "https://github.com/4dn-dcic/foursight-core.git", branch="master" }
foursight-core = "4.4.0.1b2"
geocoder = "1.38.1"
gitpython = "^3.1.2"
google-api-python-client = "^1.7.4"
google-auth = "^2.22.0"
gspread = ">=3.6.0"
Jinja2 = "2.10.1"
MarkupSafe = "1.1.1"
oauth2client = ">=4.1.3"
pandas = ">=1.1.4"
PyJWT = "^2.5.0"
pytest = "5.1.2"
tibanna_ff = ">=0.22.5"
pytz = "^2020.1"

[tool.poetry.dev-dependencies]
chalice = "^1.26.0"
flaky = "3.6.1"
pytest-cov = "2.7.1"

[tool.poetry.scripts]
local-check-execution = "chalicelib_fourfront.scripts.local_check_execution:main"
publish-to-pypi = "dcicutils.scripts.publish_to_pypi:main"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
