[tool.poetry]
name = "foursight"
version = "4.4.3"
description = "Serverless Chalice Application for Monitoring"
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
packages = [
  { include = "chalicelib_fourfront" }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
cron-descriptor = "^1.4.0"
click = "^7.1.2"
dcicutils = "^8.0.0"
PyJWT = "^2.5.0"
Jinja2 = "^3.1.2"
MarkupSafe = "^2.1.3"
geocoder = "1.38.1"
# elasticsearch 7.17.9 (at least) has a problem:
# Error: "The client noticed that the server is not Elasticsearch and we do not support this unknown product"
# https://stackoverflow.com/questions/68802324/elasticsearch-in-go-err-the-client-noticed-that-the-server-is-not-elasticsear
elasticsearch = "7.13.4"
elasticsearch-dsl = "^7.0.0"
gitpython = "^3.1.2"
pytz = "^2020.1"
tibanna-ff = "^3.2.0"
## adding foursight-core
# use below for deployment
foursight-core = "^5.4.1"
# use below for tests but not for deployment
# foursight-core = { git = "https://github.com/4dn-dcic/foursight-core.git", branch="master" }
# Need pytest-redis 3.0.2 or higher for pytest 7.4.2 (or higher).
pytest = "^7.4.2"
pytest-redis = "^3.0.2"
gspread = ">=3.6.0"
oauth2client = ">=4.1.3"
benchmark-4dn = "^0.5.17"
google-analytics-data = "^0.17.1"
tzlocal = "^5.1"

[tool.poetry.dev-dependencies]
chalice = "^1.26.0"
pytest-cov = "^4.1.0"
flaky = "3.6.1"

[tool.poetry.scripts]
local-check-execution = "chalicelib_fourfront.scripts.local_check_execution:main"
publish-to-pypi = "dcicutils.scripts.publish_to_pypi:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
